Completed full background chapter

--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -233,10 +233,18 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
   year={2017}
 }
 
-@article{Roddy2018,
+@article{Roddy2018a,
   title={Investigating speech features for continuous turn-taking prediction using lstms},
   author={Roddy, Matthew and Skantze, Gabriel and Harte, Naomi},
   journal={arXiv preprint arXiv:1806.11461},
+  year={2018}
+}
+
+@inproceedings{Roddy2018b,
+  title={Multimodal continuous turn-taking prediction using multiscale rnns},
+  author={Roddy, Matthew and Skantze, Gabriel and Harte, Naomi},
+  booktitle={Proceedings of the 20th ACM International Conference on Multimodal Interaction},
+  pages={186--190},
   year={2018}
 }
 
@@ -299,7 +307,7 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
 
 @article{Duncan1973,
   title={Toward a grammar for dyadic conversation},
-  author={Duncan, STARKEY, JR},
+  author={Duncan, Starkey},
   year={1973},
   publisher={Walter de Gruyter, Berlin/New York Berlin, New York}
 }
@@ -334,4 +342,117 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
   pages={22--63},
   year={1967},
   publisher={Elsevier}
+}
+
+@inproceedings{Sato2002,
+  title={Learning decision trees to determine turn-taking by spoken dialogue systems.},
+  author={Sato, Ryo and Higashinaka, Ryuichiro and Tamoto, Masafumi and Nakano, Mikio and Aikawa, Kiyoaki},
+  booktitle={INTERSPEECH},
+  year={2002}
+}
+
+@inproceedings{Bell2001,
+  title={Real-time handling of fragmented utterances},
+  author={Bell, Linda and Boye, Johan and Gustafson, Joakim},
+  booktitle={Proc. NAACL workshop on adaptation in dialogue systems},
+  pages={2--8},
+  year={2001}
+}
+
+@article{Meena2014,
+  title={Data-driven models for timing feedback responses in a Map Task dialogue system},
+  author={Meena, Raveesh and Skantze, Gabriel and Gustafson, Joakim},
+  journal={Computer Speech \& Language},
+  volume={28},
+  number={4},
+  pages={903--922},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{Raux2008,
+  title={Optimizing endpointing thresholds using dialogue features in a spoken dialogue system},
+  author={Raux, Antoine and Eskenazi, Maxine},
+  booktitle={Proceedings of the 9th SIGdial Workshop on Discourse and Dialogue},
+  pages={1--10},
+  year={2008}
+}
+
+@article{Maier2017,
+  title={Towards deep end-of-turn prediction for situated spoken dialogue systems},
+  author={Maier, Angelika and Hough, Julian and Schlangen, David and others},
+  year={2017}
+}
+
+@inproceedings{Ward2018,
+  title={Turn-taking predictions across languages and genres using an lstm recurrent neural network},
+  author={Ward, Nigel G and Aguirre, Diego and Cervantes, Gerardo and Fuentes, Olac},
+  booktitle={2018 IEEE Spoken Language Technology Workshop (SLT)},
+  pages={831--837},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{Schlangen2006,
+  title={From reaction to prediction: Experiments with computational models of turn-taking},
+  author={Schlangen, David},
+  journal={Proceedings of Interspeech 2006, Panel on Prosody of Dialogue Acts and Turn-Taking},
+  year={2006}
+}
+
+@article{Jiang2023,
+  title={Response-conditioned Turn-taking Prediction},
+  author={Jiang, Bing'er and Ekstedt, Erik and Skantze, Gabriel},
+  journal={arXiv preprint arXiv:2305.02036},
+  year={2023}
+}
+
+@article{Delvin2018,
+  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2018}
+}
+
+@article{Liu2018,
+  title={Generating wikipedia by summarizing long sequences},
+  author={Liu, Peter J and Saleh, Mohammad and Pot, Etienne and Goodrich, Ben and Sepassi, Ryan and Kaiser, Lukasz and Shazeer, Noam},
+  journal={arXiv preprint arXiv:1801.10198},
+  year={2018}
+}
+
+@article{Vaswani2017,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@article{Levinson2012,
+  title={Action formation and ascription},
+  author={Levinson, Stephen C},
+  journal={The handbook of conversation analysis},
+  pages={101--130},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{Radford2019,
+  title={Language models are unsupervised multitask learners},
+  author={Radford, Alec and Wu, Jeffrey and Child, Rewon and Luan, David and Amodei, Dario and Sutskever, Ilya and others},
+  journal={OpenAI blog},
+  volume={1},
+  number={8},
+  pages={9},
+  year={2019}
+}
+
+@article{DuBois1993,
+  title={Representing hierarchy: Constituent structure for discourse databases},
+  author={Du Bois, John W and Schuetze-Coburn, Stephan},
+  journal={Talking data: Transcription and coding in discourse research},
+  pages={221--260},
+  year={1993},
+  publisher={Lawrence Erlbaum Hillsdale, NJ}
 }
