--- a/docs/thesis/mybibfile.bib
+++ b/docs/thesis/mybibfile.bib
@@ -76,12 +76,7 @@
   year={1981},
   publisher={Taylor \& Francis}
 }
-@inproceedings{Gravano2009,
-  title={Backchannel-inviting cues in task-oriented dialogue},
-  author={Gravano, Agust{\'\i}n and Hirschberg, Julia},
-  booktitle={Tenth Annual Conference of the International Speech Communication Association},
-  year={2009}
-}
+
 @article{HelEdl2010,
   title={Pauses, gaps and overlaps in conversations},
   author={Heldner, Mattias and Edlund, Jens},
@@ -455,4 +450,15 @@ keywords = {Turn-taking, Dialogue systems, Social robotics, Prosody, Gaze}}
   pages={221--260},
   year={1993},
   publisher={Lawrence Erlbaum Hillsdale, NJ}
+}
+
+@article{Koiso1998,
+  title={An analysis of turn-taking and backchannels based on prosodic and syntactic features in Japanese map task dialogs},
+  author={Koiso, Hanae and Horiuchi, Yasuo and Tutiya, Syun and Ichikawa, Akira and Den, Yasuharu},
+  journal={Language and speech},
+  volume={41},
+  number={3-4},
+  pages={295--321},
+  year={1998},
+  publisher={SAGE Publications Sage UK: London, England}
 }
