--- a/docs/thesis/skeleton.tex
+++ b/docs/thesis/skeleton.tex
@@ -148,19 +148,23 @@ The reactionary approach assumes that turn-taking organisation is regulated by b
 
 Others have argued against the general model of a reactionary approach as, put simply, turn-transitions occur too quickly and turn-yielding signals occur too late within a speaker's utterance for the listener to simply react to an end-of-turn signal (\cite{LevTor2015, Riest2015}). (It is important to note that the \texttt{reactionary} approach is only dismissed in the context of the entire psycholinguistic model where both production and comprehension is considered.) 
 
-\cite{Sacks1974} pioneered the \texttt{predictive} approach and in their analysis of turn-taking argued that the observed speed of turn-transitions required some form of `projection` with the production of language beginning prior to the end of a turn. This model of turn-taking is based off of separating speech into units, where one participant is the speaker, called \texttt{Turn Construction Units (TCU)} and immediately after completing a TCU a \texttt{Transition Relevance Place (TRP)} occurs that signals that a turn-transition (turn-shift) can occur. It is also important to note that a TRP does not always result in a turn-shift and a turn-shift does not always occur at a TRP. Nevertheless, every TRP is governed by a set of rules determining whether or not a TRP will result in a turn-shift: 
+\cite{Sacks1974} pioneered the \texttt{predictive} approach and in their analysis of turn-taking argued that the observed speed of turn-transitions required some form of `projection` with the production of language beginning prior to the end of a turn. This model of turn-taking is based off of separating speech into units, where one participant is the speaker, called \texttt{Turn Construction Units (TCU)} and immediately after completing a TCU a \texttt{Transition Relevance Place (TRP)} occurs that signals that a turn-transition (turn-shift) can occur. It is also important to note that a TRP does not always result in a turn-shift and a turn-shift does not always occur at a TRP. 
+
+\iffalse
+Nevertheless, every TRP is governed by a set of rules determining whether or not a TRP will result in a turn-shift: 
 \begin{enumerate}
     \item{} The current speaker may select a new speaker during which the other participants act as listeners 
     \item{} If the current speaker does not select then any participant can self-select. The first to start gains the turn.
     \item{} If no other party self-selects, the current speaker may continue. 
 \end{enumerate} 
 
-The rules highlights an interesting property of turn-taking, first noted by \cite{Sacks1974} and verified by \cite{tenBosch2005}, that intra-speaker gaps (gaps within the same utterance) are longer than inter-speaker gaps (gap resulting in a turn-shift) by around 25\%.
 
+The rules highlights an interesting property of turn-taking, first noted by \cite{Sacks1974} and verified by \cite{tenBosch2005}, that intra-speaker gaps (gaps within the same utterance) are longer than inter-speaker gaps (gap resulting in a turn-shift) by around 25\%.
+\fi
 \cite{Sacks1974} note that in order for a listener to project the end-of-turn than the speaker would have to construct their turns, with successive TCUs, in such a way that a turn transition is foreshadowed, showing that the turn is, in effect, winding down.
 
-Some effort has been taken by \cite{HelEdl2010} to critique the \texttt{predictive} approach. They argued that the systematic properties outlined within \cite{Sacks1974} are not consistent with observed data. 
-This claim originates from the number of turn transitions above 200ms (41\%-45\% \cite{HelEdl2010}) and for these turn transitions, listeners are reacting to silence or reacting to phrase-final prosodic information. \cite{LevTor2015} comprehensibly dismisses the claim by citing it takes for a silence to be recognisable, the reaction to the silence and any production of speech, where they claim the process would take 550ms. In addition to this, \cite{Riest2015} point out that the presence of longer gaps could be explained by a speaker intentionally delaying a response when producing a 'dispreferred' response (\cite{Lev1983, KenTor2014}). The existence of phrase-final cues that contribute to turn-taking however, is an area of debate that could explain the complexities within the organisation of turn-taking. 
+Some effort has been taken by \cite{HelEdl2010} to critique the \texttt{predictive} approach.  
+This claim originates from the number of turn transitions above 200ms (41\%-45\% \cite{HelEdl2010}) and that, for these turn transitions, listeners are reacting to silence. \cite{LevTor2015} comprehensibly dismisses the claim by stating that comprehension and production takes at minimum 550ms, outside the normal range of turn transitions. In addition to this, \cite{Riest2015} point out that the presence of longer gaps could be explained by a speaker intentionally delaying a response when producing a 'dispreferred' response.
 
 \subsection{Turn-taking Cues}
 The question remains, what features of speech are relevant when predicting a TCU completion and, as such, when completing a turn? 
@@ -169,52 +173,63 @@ Most work has focussed on three aspects of conversation: syntactic, prosodic and
 
 Although \cite{Sacks1974} left solving the question of how projection occurs they suggested that syntax to future research but they suggested that syntax and semantics contributed more due to the projectibility of syntactic units as compared to the projectibility of prosodic units. 
 
-The complex nature of turn-taking and the constraints imposed by language production means that turn-taking cues have to be early enough in order to determine a turn-completion and to generate some kind of response. With knowledge of the temporal requirements \cite{deRuiter2006} tasked participants to predict a turn-completion both when intonational contours have been removed and then when lexicosyntactic information is removed. They found that performance was unaffected by the removal of intonational context but it was heavily affected by the removal of lexicosyntactic information concluding that lexicosyntactic information is necessary for turn-taking and tentatively sufficient for turn-taking while this is not the case for intonational information. 
-This study was backed up by \cite{Magyari2012} that when participants predicted the remaining part of a sentence they were more accurate in predicting a turn-completion which could be due to a listener predicting the content of the sentence, as such predicting the length of the remaining utterance. This belief was also highlighted by \cite{PicGar2013} who found that listeners actually imitate the speaker to determine intention and as such the content which is combined with the speaker's speaking rate to correctly time their own prepared utterance.
+The complex nature of turn-taking and the constraints imposed by language production means that turn-taking cues have to be early enough in order to determine a turn-completion and then to generate some kind of response \cite{LevTor2015}. With knowledge of these temporal requirements, \cite{deRuiter2006} found that end-of-turn prediction was unaffected by the removal of intonational contours but it was affected by the removal of lexicosyntactic information. 
+This study was backed up by \cite{Magyari2012} that showed when participants predicted the remaining part of a sentence, this prediction was more accurate if the end-of-turn prediction was also accurate. This suggests that the listener uses a predicted utterance to determine turn-completion. 
 
-However, purely considering lexicosyntactic information may result in predicting turn-shifts too frequently due to the prevalence of syntactic completeness points (\cite{Ford1996}) within sentences. For example (taken from \cite{Ford1996}):
+This belief was also highlighted by \cite{PicGar2013} who found that listeners actually imitate the speaker to determine intention and as such the content which is combined with the speaker's speaking rate to correctly time their own prepared utterance.
 
+The reliance on lexicosyntactic information, especially in a predictive framework, is well-founded as according to \cite{Sacks1974} syntactic units is a more feasible unit to project than prosodic units. 
+Syntactic completeness is important as \cite{Ford1996} found that most TRPs occur at syntactic completion points. 
+\cite{Ford1996} defined an utterance is syntactically complete if "in its discourse context, it could be interpreted as a complete clause, that is, with an overt or directly recoverable predicate, without considering intonation or interactional import".
+While syntax is rooted in linguistic structure pragmatics has more to do with conversational context and intention. 
+In their analysis \cite{Ford1996} defined an utterance as pragmatically complete if it is a "complete conversational action within a sequential context".
+As such it means that we can judge whether an utterance has fulfilled its purpose within conversation such as when answering questions.
+
+The following example demonstrates the many possible syntactic completion points while showing that pragmatic completion demonstrates a more nuanced selection of possible TRP locations: 
 \begin{quote}
     V: And his knee was being worn/- okay/ wait./
     It was bent/ that way/
 \end{quote}
 
-Here `/` represents a syntactic completion points where an utterance is syntactically complete if "in its discourse context, it could be interpreted as a complete clause, that is, with an overt or directly recoverable predicate, without considering intonation or interactional import". With so many syntactic completion points it is important to determine the differences between those to find correct TRPs. \cite{Ford1996} did so by defining a point of syntactic, intonational and pragmatic completeness as a \texttt{Complex Transition Relevant Phrase (CRTP)} where 71\% of CRTPs are turnshifts. In this instance, intonational completeness refers to a completion of an intonational unit containing a single coherent intonational contour (\cite{DuBois1993}) and pragmatic completeness refers to a point of intonational completeness with a complete conversational action. The importance of pragmatics is seen in \cite{PicGar2013} due to its description and reliance on intention to predict a turn-completion. 
-
-However, it may be important to determine the differences in what may or may not be used in determining a turn-completion. In \cite{PicGar2013} speaker intention plays an important role in allowing the listener to ultimately predict the end of an utterance. The role of intention aligns well with what is can be described as `action` as in \cite{Levinson2012} and `pragmatics` within \cite{Ford1996} (although their definition considers intonation). As such the removal of lexicosyntactic information as in \cite{deRuiter2006} and the resulting effects could be related to the overall removal of pragmatics. 
-
 \cite{Ford1996} theorised that TCUs and their partnering TRPs are a complex notion and as such multiple factors should be considered for predicting a turn completion. This belief was tested by \cite{BogTor2015} who also sought to refute the claim that intonation had no effect on turn-taking prediction by \cite{deRuiter2006}. This was done by performing the same experiment but with instances of questions with equal syntactic completion points but different turn-shift locations (e.g. Are you a student? vs. Are you a student at university?). They found that in cases of syntactical ambiguity, lexicosyntactic information is not sufficient for turn-end projection and as such they claim intonation plays a role of disambiguation.  
 
-The findings of \cite{BogTor2015} also suggest that listeners look out for turn-taking cues that are present later on within an utterance. These turn-taking cues are both lexicosyntactic and intonational. This suggests a more complicated psycholinguistic model of turn-taking that is explored within \cite{LevTor2015} where the planning of content is begun once the intention of the content is determined. As such the content is prepared and with the perception of turn completion, whether by syntactic, pragmatic or prosodic completeness, the utterance is produced. \cite{LevTor2015} suggests that the listener may specifically look for syntactic and prosodic completeness to determine when to speak. 
+The findings of \cite{BogTor2015} also suggest that listeners look out for turn-taking cues that are present later on within an utterance. These turn-taking cues are both lexicosyntactic and intonational. This suggests a more complicated psycholinguistic model of turn-taking that is explored within \cite{LevTor2015} where the planning of content is begun once the intention of the content is determined. As such the content is prepared and when an end-of-turn is signalled, whether by syntactic, pragmatic or prosodic completeness, the utterance is produced.
+
+\subsection{Overlaps} 
+As noted by \cite{Sacks1974} overlaps are common within TCUs but these occurances are brief and so they are not sufficient enough to constitute a turn. Turn-taking models and systems should account for the addition of backchannels.
 
 \section{Models for End-of-Turn Detection and Prediction}
 The tradition around conversational systems' turn-taking ability is based on the existence of a silence threshold. In these models a turn is assumed to have been yielded by the current speaker once some threshold has been past (around 650ms). However, as it is to be expected, this approach yields sluggish or possibly, mistaken interruptions. As discussed above, human-human turn-taking organisation is complicated and nuanced and as such the models generated should aim to be able to utilise the signals available in conversation.
 
 \subsection{Classification-based Models}
-Further research brought this idea into fruition with what could be interpreted as 'IPU-based' models. An \texttt{Interpausal Unit (IPU)} is a segmented part of continuous speech without silence exceeding a certain threshold (200ms). IPU-based models still undertake some form of silence detection, just with a shorter threshold than a pure-silence model, and after sufficient silence has been detected the model predicts whether the silence is a TRP or a non-TRP and as such whether the turn has been yielded by the speaker.
+Further research brought more nuanced 'IPU-based' models. An \texttt{Interpausal Unit (IPU)} is a segmented part of continuous speech without silence exceeding a certain threshold (200ms). IPU-based models still undertake silence detection, just with a shorter threshold. But after a sufficient silence has been detected the model predicts whether the silence is a TRP or a non-TRP.
 
-Naturally, these models resembled the natural progression of state-of-the art machine learning models moving from rule-based classifier \cite{Bell2001}, to a decision-tree classifier \cite{Sato2002, Ferrer2002, Schlangen2006, Meena2014, Raux2008} and then now onto deep learning architectures including the use of an LSTM RNN architecture \cite{Maier2017}. 
-Each model uses a different set of features and found varying results on the effectiveness of various prosodic, lexicosyntactic and pragmatic features. Specifically \cite{Sato2002} and \cite{Meena2014} found that prosody did not contribute significantly to a decision while \cite{Ferrer2002} and \cite{Schlangen2006} found that syntactic and prosodic features both contribute to turn-taking accuracy.
+Naturally, these models resembled the natural progression of state-of-the art machine learning models moving from rule-based classifier \cite{Bell2001}, to a decision-tree classifier \cite{Sato2002, Ferrer2002, Schlangen2006, Meena2014, Raux2008, Koiso1998} and then now onto deep learning architectures including the use of an LSTM RNN architecture \cite{Maier2017}. 
+Each model uses a different set of features and found varying results on the effectiveness of various prosodic, lexicosyntactic and pragmatic features. Specifically, \cite{Sato2002} and \cite{Meena2014} found that prosody did not contribute significantly to a decision while \cite{Ferrer2002} and \cite{Schlangen2006} found that syntactic and prosodic features both contribute to turn-taking accuracy. 
+\cite{Koiso1998} found that in Japanese data, that even POS tags are powerful cues to predict turn-change.
 
-Models such as \cite{Sato2002, Schlangen2006, Meena2014} specifically use silence thresholds that are fixed in size. As such, if the speaker yields their turn and if the model does not detect an end of turn then a state of silence may continue.
-As such other models such as \cite{Ferrer2002, Raux2008} incorporate silence length in order to continuously condition a response based on the time of silence and as such the longer after a pause the more likely that the turn has in fact been yielded. \cite{Raux2008}, took this step further by also using turn-holding cues in order to condition the silence threshold so when more turn-holding cues are detected, the system will wait longer before considering a turn-shift event. 
+Backchannels are also generally, an important part of conversation due to their regularity and as such \cite{Gravano2011} investigated their cues and found predictors for these events that are radically different from identifies turn-taking cues. As such modelling the two differently should be performed. 
 
-This process of monitoring speaker cues, to determine a turn-holding intention \cite{Raux2008}, introduced the concept of a continuous model to monitor turn-taking. An approach which has been all the more feasible with advances in both deep learning architectures and more powerful feature extractors or pretrained features. Rather than taking on a traditional approach of classifying an utterance, the continuous model processes an utterance incrementally so that at any point the model is able to predict the likelihood of a turn-shift. The system bares more symmetry with our human-human interactions as the system could be able to project turn-completions, determine intent or action and generate an appropriate response. 
+ This highlights an issue with these styles of models in that it is a purely reactive system and so the system is not able to make decisions early in an utterance and so performant human-like gaps is not reasonable without considering the incremental alternative.  
 
 \subsection{Continuous Models}
-Another issue with previous approaches to turn-taking, namely the classification approach, is the availability of data that is accurately annotated. As well as this, speech data can be noisy as noted by \cite{Sacks1974} overlapping speech is common but brief, and these sections of speech should not constitute a turn-shift and so this has to be annotated well in data. 
+
+Rather than taking on a traditional approach of classifying an utterance, the continuous model processes an utterance incrementally so that at any point the model is able to predict the likelihood of a turn-shift. The system bares more symmetry with our human-human interactions as the system could be able to project turn-completions, determine intent or action and generate an appropriate response. 
+
+An issue with previous approaches to turn-taking, namely the classification approach, is the availability of data that is accurately annotated. As well as this, speech data can be noisy as noted by \cite{Sacks1974} overlapping speech is common but brief, and these sections of speech should not constitute a turn-shift and so this has to be annotated well in data.
+
 Recognising this issue, \cite{Skantze2017} proposed a general, continuous turn-taking model, that was trained in a self-supervised manner. Self-supervised as the model is predicting the voice activity of separate speakers over the next two seconds and so it is able to predict a turn-shift based on this speech activity data. The model is also continuous in that it makes these predictions in 50ms intervals.
 
-Others have also adopted the general LSTM approach \cite{Maier2017, Roddy2018a} to investigate the effectiveness of certain features. The general consensus is that both features in conjunction are required for superior performance however \cite{Roddy2018a} found that acoustic features are more beneficial and \cite{Maier2017} found that using only linguistic features was in fact worse than the baseline used. 
-\cite{Roddy2018b} introduced a multiscale approach where linguistic and prosodic features are processed with different temporal speeds, linguistic features at slower time frames, which yielded better results than the previous baseline provided by both \cite{Roddy2018a, Skantze2017} suggesting that the considering the two features at different granularities can provide additional benefits. 
+Others have also adopted the general LSTM approach (\cite{Maier2017, Roddy2018a}) to investigate the effectiveness of certain features. The general consensus is that both features in conjunction are required for superior performance however \cite{Roddy2018a} found that acoustic features are more beneficial and \cite{Maier2017} found that using only linguistic features was in fact worse than their baseline result. 
 
-In order to seek improvements over these deep learning approaches it is imperative to discuss the quality of features in use. Prosodic features are generally a far more concrete cue to consider than linguistic features. Semantics of a conversation is difficult for models to discern as natural language is complex and ambiguous and any one intention can be represented in a variety of different word formations making overall semantics and pragmatics generated by individual linguistic tokens difficult to capture. As such, linguistic feature representation within \cite{Roddy2018a, Skantze2017, Maier2017} have been simplistic or in some cases non-existent \cite{Ward2018}. \cite{Skantze2017} solely used POS tags. \cite{Roddy2018a} used a linear neural network to generate embeddings specific for turn-taking and \cite{Maier2017} used an enriched language model, trained by predicting a hidden word and in this case a special token representing the end of a turn. 
+In order to seek improvements over these deep learning approaches it is imperative to discuss the quality of features in use. Prosodic features are generally a far more concrete cue to consider than linguistic features. The semantics of a conversation is difficult for models to discern as natural language is complex and ambiguous and any one intention can be represented in a variety of different word formations making overall semantics and pragmatics generated by individual linguistic tokens difficult to capture. As such, linguistic feature representation within \cite{Roddy2018a, Skantze2017, Maier2017} have been simplistic or in some cases non-existent (\cite{Ward2018}). \cite{Skantze2017} solely used POS tags. \cite{Roddy2018a} used a linear neural network to generate embeddings specific for turn-taking and \cite{Maier2017} used an enriched language model, trained by predicting a hidden word and in this case a special token representing the end of a turn. 
 
-This usage of a special token is a step undertaken by TurnGPT (\cite{Ekstedt2020}). Stronger language models allows for greater pragmatic and semantics and various contexts to be captured and by using these enhanced embeddings the predictive power of linguistic features will increase. TurnGPT is based on Open AI's GPT-2 (\cite{Radford2019}) which has been pretrained on a next-word prediction task and as such TurnGPT performs additional finetuning by the addition of speaker tokens and a special token indicating the end of a turn. The model shows increased performance when considering context as well as a greater consideration of pragmatic completeness over its LSTM baseline.  
+Although the execution is different the idea of a special token to discern speaker changes is a step undertaken by TurnGPT (\cite{Ekstedt2020}). Stronger language models allows for greater pragmatic and semantics and various contexts to be captured and by using these enhanced embeddings the predictive power of linguistic features will increase. TurnGPT is based on Open AI's GPT-2 (\cite{Radford2019}) which has been pretrained on a next-word prediction task and TurnGPT performs additional finetuning by the addition of speaker tokens and a special token indicating the end of a turn. The model shows increased performance when considering context of previous turns as well as a greater consideration of pragmatic completeness over its LSTM baseline where 20\% of its attention is directed towards earlier utterances.
 
-Open AI's GPT-2 (\cite{Radford2019}) is based on the transformer decoder (\cite{Liu2018}) structure while \texttt{Bidirectional Encoder Representations from Transformers (BERT)}(\cite{}) is based primarily on the original transformer architecture (\cite{Vaswani2017}), the main difference is that BERT is able to utilize bidirectional self-attention whereas the GPT in a general sense can only be used in an autoregressive manner, so by attending to context on the left. BERT is trained based off of two tasks, Mask LM, where the model predicts 15\% unknown tokens and next sentence prediction.
+Open AI's GPT-2 (\cite{Radford2019}) is based on the transformer decoder (\cite{Liu2018}) structure while \texttt{Bidirectional Encoder Representations from Transformers (BERT)}(\cite{}) is based primarily on the original transformer architecture (\cite{Vaswani2017}), the main difference is that BERT is able to utilize bidirectional self-attention whereas the GPT in a general sense can only be used in an autoregressive manner, so by attending to context on the left. 
 
-\cite{Ekstedt2020} suggest that by generating responses using GPT-2's primary function of generating output, the system can predict how long it will be until a turn-completion by generating multiple possible outputs. This idea was furthered by \cite{Jiang2023} who proposed, RC-TurnGPT, which augments TurnGPT's training procedure by using the previous context and the next utterance in order to generate the probability of a turn shift. This extension of context allows for more considered turn-taking where the model does not take a turn at an early completion point. This could, for example, be a statement followed by a question. As such it explore the room of exploration that could be achieved by considering both directions of contextual history and future in producing a turn-shift prediction.  
+\cite{Ekstedt2020} suggest that by generating responses using GPT-2's primary function of generating output, the system can predict how long it will be until a turn-completion by generating multiple possible outputs. This idea was furthered by \cite{Jiang2023} who proposed, RC-TurnGPT, which augments TurnGPT's training procedure by using the previous context and the next utterance in order to generate the probability of a turn shift. This extension of context allows for more considered turn-taking where the model does not take a turn at an early completion point. This could, for example, be a statement followed by a question.
+As such it partially explore what could be achieved by considering both directions of contextual history and future in producing a turn-shift prediction.  
 
 \chapter{Your next chapter}
 
